@@ -181,6 +181,8 @@ Reboot=no
 
 ## CrystalFontz633 driver (for CF633 only) ##
 [CFontz633]
+# Note: Use of this driver is deprecated, please use CFontzPacket driver
+# with Model=633 instead.
 
 # Select the output device to use [default: /dev/lcd]
 Device=/dev/ttyS0
@@ -205,31 +207,45 @@ Reboot=yes
 
 
 
-## CrystalFontz packet driver (for CF631, CF633 & CF635) ##
+## CrystalFontz packet driver (for CFA533, CFA631, CFA633 & CFA635) ##
 [CFontzPacket]
 
-# Select the LCD model [default: 633; legal: 631, 633, 635]
-Model=635
+# Select the LCD model [default: 633; legal: 533, 631, 633, 635]
+Model=633
+
 # Select the output device to use [default: /dev/lcd]
 Device=/dev/ttyUSB0
-# Select the LCD size [default: depending on model: 635: 20x4, 631: 20x2, 633: 16x2]
-Size=20x4
+
 # Set the initial contrast [default: 560; legal: 0 - 1000]
 Contrast=350
+
 # Set the initial brightness [default: 1000; legal: 0 - 1000]
 Brightness=1000
+
 # Set the initial off-brightness [default: 0; legal: 0 - 1000]
 # This value is used when the display is normally
 # switched off in case LCDd is inactive
 OffBrightness=50
-# Set the communication speed [default: 9600; legal: 1200, 2400, 9600, 19200, 115200]
-Speed=115200
-# Set the firmware version (New means >= 2.0) [default: no; legal: yes, no]
-# Currently this flag is not in use, there is no such thing as NewFirmware. ;=)
-#NewFirmware=no
-# Reinitialize the LCD's BIOS [default: no; legal: yes, no]
-# I want to reboot the LCD to make sure we start from a known state
+
+# Reinitialize the LCD's BIOS on driver start. [default: no; legal: yes, no]
 Reboot=yes
+
+# Enable the USB flag if the device is connected to an USB port. For
+# serial ports leave it disabled. [default: no; legal: yes, no]
+#USB=yes
+
+# Very old 633 firmware versions do not support partial screen updates using
+# 'Send Data to LCD' command (31). For those devices it may be necessary to
+# enable this flag. [default: no; legal: yes, no]
+#OldFirmware=yes
+
+# Override the LCD size known for the selected model. Usually setting this
+# value should not be necessary.
+#Size=20x4
+
+# Override the default communication speed known for the selected model.
+# [default: depending on model; legal: 19200, 115200]
+#Speed=115200
 
 
 
